# tensor

./: .gitignore  .gitmodules  .readthedocs.yml  .ycm_extra_conf.py  CMakeLists.txt  CONTRIBUTORS.txt  README.md
app/: CMakeLists.txt  gqten_mpi_gemm_batch_worker.cc
cmake/Modules/: Findhptt.cmake
doc/: Doxyfile  index.md
doc/rtd_suit/: conf.py  index.rst
include/gqten/: consts.h  fwd_dcl.h  gqten.h  gqtensor_all.h  tensor_manipulation_all.h  utils_inl.h  value_t.h
include/gqten/detail/: consts.h  fwd_dcl.h  gqtensor_impl.h  index_combine_impl.h  qnblock_impl.h  ten_ctrct_fwd.h  ten_ctrct_impl.h  ten_ctrct_inl.h  ten_expand_impl.h  ten_linalg_wrapper.h  ten_lincmb_impl.h  ten_svd_impl.h  utils_inl.h  value_t.h  vec_hash.h
include/gqten/framework/: consts.h  value_t.h  vec_hash.h
include/gqten/framework/bases/: executor.h  hashable.h  showable.h  streamable.h
include/gqten/framework/hp_numeric/: blas_level1.h  blas_level3.h  lapack.h  ten_trans.h
include/gqten/gqtensor/: gqtensor.h  gqtensor_impl.h  index.h  qnblock_impl.h  qnsct.h
include/gqten/gqtensor/blk_spar_data_ten/: blk_spar_data_ten.h  data_blk.h  data_blk_mat.h  data_blk_operations.h  global_operations.h  qnblk_info.h  raw_data_operation_tasks.h  raw_data_operations.h
include/gqten/gqtensor/qn/: qn.h  qnval.h  qnval_u1.h
include/gqten/impl/: consts.h  gqtensor_impl.h  qnblock_impl.h  utils_inl.h  vec_hash.h
include/gqten/manipulation/: ten_expand_impl.h  ten_linalg_wrapper.h  ten_lincmb_impl.h  ten_svd_impl.h
include/gqten/tensor_manipulation/: basic_operations.h  index_combine.h  ten_ctrct.h  ten_ctrct_fwd.h  ten_ctrct_impl.h  ten_expand.h  ten_index_merge.h  ten_linalg_wrapper.h  ten_linear_combine.h  ten_svd_impl.h
include/gqten/tensor_manipulation/ten_decomp/: ten_decomp_basic.h  ten_qr.h  ten_svd.h
include/gqten/utility/: timer.h  utils_inl.h
src/: CMakeLists.txt  gqten.cc  gqtensor.cc  index.cc  mpi_ten_ctrct.cc  mpi_ten_ctrct.h  mpi_ten_numer_func.cc  mpi_ten_numer_func.h  qn.cc  qnblock.cc  qnsector.cc  ten_ctrct.cc  ten_ctrct.h  ten_lincmb.cc  ten_lincmb.h  ten_numer_func.cc  ten_numer_func.h  ten_svd.cc  ten_svd.h  ten_trans.cc  ten_trans.h  timer.cc  timer.h  utils.cc  utils.h  vec_hash.h
tests/: CMakeLists.txt  test_gqtensor.cc  test_index.cc  test_index_combine.cc  test_mpi_numer_func.cc  test_mpi_ten_ctrct.cc  test_numer_func.cc  test_qn.cc  test_qnblock.cc  test_qnsector.cc  test_qnsectorset.cc  test_ten_ctrct.cc  test_ten_expand.cc  test_ten_lincmb.cc  test_ten_svd.cc  testing_utility.h  testing_utils.h
tests/test_gqtensor/: test_gqtensor.cc  test_index.cc  test_qn.cc  test_qnsct.cc
tests/test_gqtensor/test_qnval/: test_qnval_u1.cc
tests/test_tensor_manipulation/: test_basic_operations.cc  test_index_combine.cc  test_ten_ctrct.cc  test_ten_expand.cc  test_ten_linear_combine.cc  test_ten_qr.cc  test_ten_svd.cc
